--- a/index.html
+++ b/index.html
@@ -34,37 +34,37 @@
     <div class="container">
       <h1 class="SectionHeader">Portfolio</h1>  
     <div class="row">
-        <a href="Test.html" class="col-xs-12 col-md-4 col-sm-6 ProjectSection ProjectSection-centered">
+        <a href="proceduralgalaxy.html" class="col-xs-12 col-md-4 col-sm-6 ProjectSection ProjectSection-centered">
           <div class ="ProjectHeader ImageGroup">
             <img src="img/galaxy.png" class=" ImageGroupImage" alt="Procedural Galaxy">
             <h1 class="ImageGroupText">Procedural Galaxy</h1>
           </div>
         </a>
-        <a href="Test.html" class="col-xs-12 col-md-4 col-sm-6 ProjectSection ProjectSection-centered">
+        <a href="physxgolf.html" class="col-xs-12 col-md-4 col-sm-6 ProjectSection ProjectSection-centered">
           <div class ="ProjectHeader ImageGroup">
             <img src="img/golf.png" class="img-responsive ImageGroupImage" alt="PhysX Golf">
             <h1 class="ImageGroupTextDark">Golf</h1>
           </div>
         </a>
-        <a href="Test.html" class="col-xs-12 col-md-4 col-sm-6 ProjectSection ProjectSection-centered">
+        <a href="networkgame.html" class="col-xs-12 col-md-4 col-sm-6 ProjectSection ProjectSection-centered">
           <div class ="ProjectHeader ImageGroup">
             <img src="img/networkgame.png" class="img-responsive ImageGroupImage" alt="Network Game">
             <h1 class="ImageGroupText">Network Game</h1>
           </div>
         </a>
-        <a href="Test.html" class="col-xs-12 col-md-4 col-sm-6 ProjectSection ProjectSection-centered">
+        <a href="spaceinvadersclone.html" class="col-xs-12 col-md-4 col-sm-6 ProjectSection ProjectSection-centered">
           <div class ="ProjectHeader ImageGroup">
             <img src="img/invaders2.png" class=" ImageGroupImage" alt="Space Invaders clone">
             <h1 class="ImageGroupTextDark">Invaders</h1>
           </div>
         </a>
-        <a href="Test.html" class="col-xs-12 col-md-4 col-sm-6 ProjectSection ProjectSection-centered">
+        <a href="pacmanclone.html" class="col-xs-12 col-md-4 col-sm-6 ProjectSection ProjectSection-centered">
           <div class ="ProjectHeader ImageGroup">
             <img src="img/pacclone.png" class="img-responsive ImageGroupImage" alt="Pacman clone">
             <h1 class="ImageGroupText">Pacman clone</h1>
           </div>
         </a>
-        <a href="Test.html" class="col-xs-12 col-md-4 col-sm-6 ProjectSection ProjectSection-centered">
+        <a href="whereswally.html" class="col-xs-12 col-md-4 col-sm-6 ProjectSection ProjectSection-centered">
           <div class ="ProjectHeader ImageGroup">
             <img src="img/wally.png" class="img-responsive ImageGroupImage" alt="Where's Wally solver">
             <h1 class="ImageGroupTextDark">Where's Wally solver</h1>
