finished basic implementation

--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
         </a>
         <a href="physxgolf.html" class="col-xs-12 col-md-4 col-sm-6 ProjectSection ProjectSection-centered">
           <div class ="ProjectHeader ImageGroup">
-            <img src="img/golf.png" class="img-responsive ImageGroupImage" alt="PhysX Golf">
+            <img src="img/golf3.png" class="img-responsive ImageGroupImage" alt="PhysX Golf">
             <h1 class="ImageGroupTextDark">Golf</h1>
           </div>
         </a>
         <a href="networkgame.html" class="col-xs-12 col-md-4 col-sm-6 ProjectSection ProjectSection-centered">
           <div class ="ProjectHeader ImageGroup">
-            <img src="img/networkgame.png" class="img-responsive ImageGroupImage" alt="Network Game">
+            <img src="img/network.png" class=" ImageGroupImage" alt="Network Game">
             <h1 class="ImageGroupText">Network Game</h1>
           </div>
         </a>
@@ -66,7 +66,7 @@
         </a>
         <a href="whereswally.html" class="col-xs-12 col-md-4 col-sm-6 ProjectSection ProjectSection-centered">
           <div class ="ProjectHeader ImageGroup">
-            <img src="img/wally.png" class="img-responsive ImageGroupImage" alt="Where's Wally solver">
+            <img src="img/wally2.png" class="img-responsive ImageGroupImage" alt="Where's Wally solver">
             <h1 class="ImageGroupTextDark">Where's Wally solver</h1>
           </div>
         </a>
@@ -77,7 +77,9 @@
 <div class="SiteSection" id="about">
     <div class="container">
       <h1 class="SectionHeader">About</h1>  
-      <p>Insert self details here</p>
+      <p>Hi, I'm Alex and I'm a software developer and games programmer. In 2018 I graduated from the University of Lincoln with an upper second class honors degree in Games Computing.</p>
+      <p>I'm hoping to pursure a career as a games programmer. I want to be a part of creating incredible and immersive games to help spread the joy that gaming has brought to me throughout my life to a new generation of players.</p>
+      <p>I'm also looking to be part of creating great new software and technologies as a software developer. As more of the world shifts over to computing I want to be one of the people helping to develop amazing software and provide great experiences for the users.</p>
     </div>
   </div>
 
