--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
    
-   <!--NavBar-->
+   <!--NavBar!-->
 <nav class="navbar navbar-inverse navbar-fixed-top">
   <div class="container-fluid">
     <div class="navbar-header">
